{
  "version": 4,
  "terraform_version": "1.7.3",
  "serial": 30,
  "lineage": "17de4c10-6e27-515e-99d0-d8ed33321d64",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "SGRoup",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/771caffd-da4b-4dcb-b141-dcdd845e39bc/resourceGroups/RCreation/providers/Microsoft.Network/networkSecurityGroups/SGRoup",
            "location": "westeurope",
            "name": "SGRoup",
            "resource_group_name": "RCreation",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "test123",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {
              "environment": "Production"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.RCreation"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "snet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/771caffd-da4b-4dcb-b141-dcdd845e39bc/resourceGroups/RCreation/providers/Microsoft.Network/networkSecurityGroups/snet",
            "location": "westeurope",
            "name": "snet",
            "resource_group_name": "RCreation",
            "security_rule": [],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.RCreation"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "dns_servers": [
              "10.0.0.4",
              "10.0.0.5"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "c5e15e86-7081-4a25-a923-5cdbdca1aa50",
            "id": "/subscriptions/771caffd-da4b-4dcb-b141-dcdd845e39bc/resourceGroups/RCreation/providers/Microsoft.Network/virtualNetworks/VNET",
            "location": "westeurope",
            "name": "VNET",
            "resource_group_name": "RCreation",
            "subnet": [
              {
                "address_prefix": "10.0.1.0/24",
                "id": "/subscriptions/771caffd-da4b-4dcb-b141-dcdd845e39bc/resourceGroups/RCreation/providers/Microsoft.Network/virtualNetworks/VNET/subnets/subnet1",
                "name": "subnet1"
              },
              {
                "address_prefix": "10.0.2.0/24",
                "id": "/subscriptions/771caffd-da4b-4dcb-b141-dcdd845e39bc/resourceGroups/RCreation/providers/Microsoft.Network/virtualNetworks/VNET/subnets/subnet2",
                "name": "subnet2",
                "security_group": "/subscriptions/771caffd-da4b-4dcb-b141-dcdd845e39bc/resourceGroups/RCreation/providers/Microsoft.Network/networkSecurityGroups/snet"
              }
            ],
            "tags": {
              "environment": "Production"
            }
          },
          "dependencies": [
            "azurerm_network_security_group.snet",
            "azurerm_resource_group.RCreation"
          ]
        }
      ]
    }
  ]
}